compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__enums__typech_create_enum_param_extra.snap
---
source: compiler/lume_typech/src/tests/check/enums.rs
description: "enum Foo { A, B }\n\n        fn foo() {\n            let a = Foo::B(false);\n        }"
---
× error[LM4116]: argument count mismatch
   ╭───────────
 3 │         fn foo() {
 4 │             let a = Foo::B(false);
   │                          ^ expected 0 arguments, but got 1
 5 │         }
   ╰──
